Name:                chordapp
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable chordapp
  hs-source-dirs: src, src/Hasmt
  main-is: Main.hs
  extensions: FlexibleContexts

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1,
    MonadCatchIO-transformers >= 0.2.1,
    mtl                       >= 2,
    snap-core                 >= 0.9,
    snap-server               >= 0.9,
    aeson                     >= 0.6.2.0,
    containers                >= 0.5.0.0,
    snap-extras               >= 0.7,
    text                      >= 0.11.3.1,
    parsec                    >= 3.1.3,
    html-conduit,
    http-conduit,
    xml-conduit,
    transformers              >= 0.3.0.0

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
